//lint:file-ignore ST1003 Ignore underscores in names, this is straigh copied from the proto package to ease introducing the domain types

package types

import "code.vegaprotocol.io/vega/proto"

type MarginLevels = proto.MarginLevels
type MarginCalculator = proto.MarginCalculator
type RiskResult = proto.RiskResult
type ScalingFactors = proto.ScalingFactors
type RiskFactor = proto.RiskFactor
